--- a/app/src/main/res/layout/activity_styles.xml
+++ b/app/src/main/res/layout/activity_styles.xml
@@ -55,8 +55,9 @@
             android:layout_marginEnd="66dp"
             android:layout_marginRight="-434dp"
             android:layout_marginTop="8dp"
-            android:text="@string/submit"
             android:background="@drawable/uw_button"
+            android:onClick="submitButtonActivity"
+            android:text="@string/submit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
